<resources>
    <string name="app_name">Bili</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username_phone">Username or phone</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="input_digits" translatable="false">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="title_settings">Settings</string>
    <string name="title_recommends">Recommends</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_history">History</string>
    <string name="title_activity_history">HistoryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="shortcut_label_history">History</string>

    <string name="proxy">Proxy</string>
    <string name="proxy_protocol">Protocol</string>
    <string name="proxy_host">Host</string>
    <string name="proxy_port">Port</string>
    <string name="auth">Auth</string>
    <string name="proxy_auth">Proxy Auth</string>
    <string name="network">Network</string>
    <string name="coins">Coins:</string>
    <string name="follower">Follower</string>
    <string name="follows">Follows</string>
    <string name="login">Login</string>
    <string name="retry">Retry</string>
    <string name="captcha">Captcha</string>
    <string name="no_url">No Url set</string>
</resources>